# ddoktti-here

./: .dockerignore  .env.example  .gitignore  PRD.md  README.md  SETUP.md  docker-compose.dokploy.yml  docker-compose.yml  package.json  pnpm-lock.yaml  slack-app-manifest.json  slack-app-manifest.yml  tsconfig.base.json
.claude/: settings.local.json
.github/workflows/: desktop-release.yml  server-ci.yml
apps/desktop/: index.html  overlay.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/.tauri/: ddoktti-updater.key.pub
apps/desktop/src/: auth.ts  main.ts  overlay.ts  sseClient.ts  styles.css  wsClient.ts
apps/desktop/src-tauri/: Cargo.toml  app.manifest  build.rs  nsis-hooks.nsh  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json  overlay.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/identity/: AppxManifest.xml  README.md  ddoktti-cert.cer  ddoktti-identity.msix  register-identity.ps1  unregister-identity.ps1
apps/desktop/src-tauri/src/: diag.rs  lib.rs  main.rs  notifier.rs
apps/server/: .dockerignore  .env.example  Dockerfile  package.json  tsconfig.json  tsup.config.ts
apps/server/src/: api.ts  config.ts  diag.ts  http.ts  index.ts  logger.ts  middleware.ts  sse.ts
apps/server/src/auth/: oauth.ts  session.ts
apps/server/src/slack/: app.ts  filters.test.ts  filters.ts  readWatch.ts  threadFollow.ts  web.ts
apps/server/src/store/: crypto.ts  db.ts  pending.ts  redis.ts  settings.ts  threads.ts  users.ts
apps/server/src/ws/: hub.ts
