[package]
name = "ddoktti-here"
version = "0.1.0"
description = "똑띠왔어요 — 슬랙 알림 오버레이"
authors = ["plead"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-single-instance = "2"
tauri-plugin-autostart = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Windows OS 알림 읽기 (UserNotificationListener) + 포그라운드 판별
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "UI_Notifications",
    "UI_Notifications_Management",
    "ApplicationModel",
    "Foundation",
    "Foundation_Collections",
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
